# data-structures

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: index.html
include/: ApplicationCpp.h  Binary.h  List.h  Stack.h
src/: Binary.cpp  List.cpp  Main.cpp  Stack.cpp
